--- a/irecruit/templates/layoutadmin.html
+++ b/irecruit/templates/layoutadmin.html
@@ -54,6 +54,12 @@
                     <strong>Add Questions</strong>
                 </a>
             </li>
+            <li>
+                <a href="/addcompany">
+                    <i class="fa fa-edit"></i>
+                    <strong>Add Company</strong>
+                </a>
+            </li>
         </ul>
 	    </nav>
       </div>
