--- a/irecruit/templates/chat.html
+++ b/irecruit/templates/chat.html
@@ -40,7 +40,7 @@
 			<ul>
 				<li class="sent">
 					<img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
-					<p>Welcome!</p>
+					<p>Welcome {{ user.firstname }}! Hope yo are ready for the interview.</p>
 				</li>
 			</ul>
 		<div class="message-input">
