--- a/irecruit/templates/detection.html
+++ b/irecruit/templates/detection.html
@@ -11,7 +11,7 @@
             <p class="h5">5. Wait until the capturing process terminates by itself.</p>
             <p class="h5">6. You will be automatically redirected to the interview session within a short while. </p>
             <p class="h5"> 7. Ensure you do not seek help in any means. Any kind of forgery detected will lead to automatic termination of the session </p>
-
+            <p class="h5">8. If you dont know the answer for a particular question respond as "i dont know".</p>
         </div>
         <a href="/face_detection" class="btn btn-outline-info" >Proceed</button> </a>
 </div>
